# rose_symptom_checker_ml

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/raw/: rose_diseases.csv
scripts/: init_db.py  seed.py  setup.sh  train_model.py  update_import.py
src/ml/: label_encoder.pkl  model.pkl
src/rose_symptom_checker/: main.py
src/rose_symptom_checker/api/: __init__.py  deps.py
src/rose_symptom_checker/api/v1/: router.py
src/rose_symptom_checker/api/v1/endpoints/: __init__.py  auth.py  diagnosis.py
src/rose_symptom_checker/core/: __init__.py  config.py  exceptions.py  security.py
src/rose_symptom_checker/db/: base.py  session.py
src/rose_symptom_checker/db/models/: __init__.py  diagnosis.py  user.py
src/rose_symptom_checker/schemas/: __init__.py  auth.py  base.py  diagnosis.py  user.py
src/rose_symptom_checker/services/: __init__.py  auth.py  ml_predictor.py  user.py
tests/: conftest.py  test_auth.py  test_diagnosis.py
